--- a/build.xml
+++ b/build.xml
@@ -68,4 +68,18 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target name="-post-dist">
+        <unzip src="${dist.war}" dest="${dist.dir}/war"/>
+    </target>
+    <target name="run-deploy">
+        <property file="nbproject/private/private.properties"/>
+        <exec executable="cmd" inputstring="${appenginepwd}">
+            <arg value="/c"/>
+            <arg value="${appcfg}"/>
+            <arg value="-e"/>
+            <arg value="timo.vesalainen@gmail.com"/>
+            <arg value="update"/>
+            <arg value="dist\war"/>
+        </exec>
+    </target>
 </project>
