--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,17 +22,41 @@
         <servlet-name>MailHandlerServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.MailHandlerServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PageServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.PageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ContentServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.ContentServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BlobServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.BlobServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>BlogServlet</servlet-name>
-        <url-pattern>/blog</url-pattern>
+        <url-pattern>/blog/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>MailHandlerServlet</servlet-name>
         <url-pattern>/_ah/mail/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PageServlet</servlet-name>
+        <url-pattern>/pageeditor/page/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ContentServlet</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BlobServlet</servlet-name>
+        <url-pattern>/blob/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
@@ -43,6 +67,18 @@
             <web-resource-name>mail</web-resource-name>
             <description/>
             <url-pattern>/_ah/mail/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>PageEditor</display-name>
+        <web-resource-collection>
+            <web-resource-name>PageEditor</web-resource-name>
+            <description/>
+            <url-pattern>/pageeditor/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
