--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -55,10 +55,6 @@
         <url-pattern>/_ah/mail/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>PageServlet</servlet-name>
-        <url-pattern>/pageeditor/page/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>ContentServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
@@ -74,6 +70,10 @@
         <servlet-name>BloggerSettingsServlet</servlet-name>
         <url-pattern>/admin/settings/blogger/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PageServlet</servlet-name>
+        <url-pattern>/admin/settings/page/*</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
@@ -83,18 +83,6 @@
             <web-resource-name>mail</web-resource-name>
             <description/>
             <url-pattern>/_ah/mail/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <description/>
-            <role-name>admin</role-name>
-        </auth-constraint>
-    </security-constraint>
-    <security-constraint>
-        <display-name>PageEditor</display-name>
-        <web-resource-collection>
-            <web-resource-name>PageEditor</web-resource-name>
-            <description/>
-            <url-pattern>/pageeditor/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <description/>
