--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -46,6 +46,10 @@
         <servlet-name>BlogEditServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.BlogEditServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RSSServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.RSSServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -81,6 +85,10 @@
     <servlet-mapping>
         <servlet-name>BlogEditServlet</servlet-name>
         <url-pattern>/admin/settings/blog/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RSSServlet</servlet-name>
+        <url-pattern>/rss</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
