--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -50,6 +50,10 @@
         <servlet-name>RSSServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.RSSServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>KMLServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.KMLServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -87,8 +91,12 @@
         <url-pattern>/admin/settings/blog/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>KMLServlet</servlet-name>
+        <url-pattern>/kml/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>RSSServlet</servlet-name>
-        <url-pattern>/rss</url-pattern>
+        <url-pattern>/rss/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
