Added namespaces listing

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -54,6 +54,10 @@
         <servlet-name>KMLServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.KMLServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NamespacesServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.NamespacesServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -97,6 +101,10 @@
     <servlet-mapping>
         <servlet-name>RSSServlet</servlet-name>
         <url-pattern>/rss/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NamespacesServlet</servlet-name>
+        <url-pattern>/namespaces</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
