--- a/build.xml
+++ b/build.xml
@@ -1,85 +1,89 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="MailBlog" default="default" basedir=".">
-    <description>Builds, tests, and runs the project MailBlog.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<?xml version="1.0" encoding="iso-8859-1" standalone="yes" ?>
+<!--
+   Copyright (C) 2012 Helsingfors Segelklubb ry
+  
+   This program is free software: you can redistribute it and/or modify
+   it under the terms of the GNU Affero General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+  
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU Affero General Public License for more details.
+  
+   You should have received a copy of the GNU Affero General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-->
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+<project name="mailblog" default="dist" basedir=".">
 
-      -pre-init:                 called before initialization of project properties 
-      -post-init:                called after initialization of project properties 
-      -pre-compile:              called before javac compilation 
-      -post-compile:             called after javac compilation 
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-dist:                 called before archive building 
-      -post-dist:                called after archive building 
-      -post-clean:               called after cleaning build products 
-      -pre-run-deploy:           called before deploying
-      -post-run-deploy:          called after deploying
-
-    Example of pluging an obfuscator after the compilation could look like 
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Other way how to customize the build is by overriding existing main targets.
-    The target of interest are: 
-
-      init-macrodef-javac:    defines macro for javac compilation
-      init-macrodef-junit:   defines macro for junit execution
-      init-macrodef-debug:    defines macro for class debugging
-      do-dist:                archive building
-      run:                    execution of project 
-      javadoc-build:          javadoc generation 
-
-    Example of overriding the target for project execution could look like 
-
-        <target name="run" depends="<PROJNAME>-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that overridden target depends on jar target and not only on 
-    compile target as regular run target does. Again, for list of available 
-    properties which you can use check the target you are overriding in 
-    nbproject/build-impl.xml file. 
-
-    -->
-    <target name="-post-dist">
-        <unzip src="${dist.war}" dest="${dist.dir}/war"/>
+    <target name="init">
+        <property file="mailblog.properties"/>
     </target>
-    <target name="run-deploy">
-        <property file="nbproject/private/private.properties"/>
-        <exec executable="cmd" inputstring="${appenginepwd}">
+
+    <!-- Compile servlets and make language translation -->
+    <target name="build" depends="init">
+        <mkdir dir="build"/>
+        <mkdir dir="build/WEB-INF"/>
+        <mkdir dir="build/WEB-INF/lib"/>
+        <mkdir dir="build/WEB-INF/classes"/>
+
+        <javac srcdir="src"
+           destdir="build/WEB-INF/classes"
+           debug="true"
+           source="${java.target}"
+           target="${java.target}"
+           includeantruntime="false" 
+           classpath="${java.classpath}"
+           encoding="utf-8"
+        >
+        </javac>
+        <copy todir="build/WEB-INF/classes">
+            <fileset dir="src" includes="**/*.properties" />
+        </copy>
+        <copy todir="build">
+            <fileset dir="web"/>
+        </copy>
+        <copy file="${appengine.api.jar}" todir="build/WEB-INF/lib"/>
+        <copy file="${kml22.jar}" todir="build/WEB-INF/lib"/>
+        <copy file="${rss.jar}" todir="build/WEB-INF/lib"/>
+    </target>
+<!--
+    First deployment from your host generates a token. Deployment prompts you
+    for the token. One way to input it is by using inputstring attribute
+        <exec executable="cmd" inputstring="<token>">
+    Following deployment from the same machine don't ask it again.
+-->
+    <target name="deploy" depends="build">
+        <exec executable="cmd">
             <arg value="/c"/>
             <arg value="${appcfg}"/>
-            <arg value="-e"/>
-            <arg value="timo.vesalainen@gmail.com"/>
+            <arg value="--oauth2"/>
+            <arg value="--use_java7"/>
+            <arg value="-A"/>
+            <arg value="${appid}"/>
             <arg value="update"/>
-            <arg value="dist\war"/>
+            <arg value="build"/>
         </exec>
     </target>
+    
+    <!-- Cleans all by removing build directories. -->
+    <target name="clean" depends="init"
+          description="Cleans all by removing build and dist directories">
+        <delete dir="build" />
+        <delete dir="dist" />
+    </target>
+    <target name="init-vanhatblogit">
+        <property name="appid" value="vanhatblogit"/>
+    </target>
+    <target name="init-j-kauaspois">
+        <property name="appid" value="j-kauaspois"/>
+    </target>
+    <target name="init-adventurersblog">
+        <property name="appid" value="adventurersblog"/>
+    </target>
+    <target name="deploy-vanhatblogit" depends="init-vanhatblogit,deploy"/>
+    <target name="deploy-j-kauaspois" depends="init-j-kauaspois,deploy"/>
+    <target name="deploy-adventurersblog" depends="init-adventurersblog,deploy"/>
 </project>
