--- a/mailblog.properties
+++ b/mailblog.properties
@@ -10,5 +10,6 @@ javaee.jar=../lib/javaee.jar
 appengine.api.jar=${appengine.java.sdk.path}/lib/user/appengine-api-1.0-sdk-${appengine.version}.jar
 kml22.jar=../KML22/dist/KML22.jar
 rss.jar=../RSS/dist/RSS.jar
+javalpg.jar=../lib/JavaLPG.jar
 
-java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${rss.jar}
+java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${rss.jar}:${javalpg.jar}
