--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,13 @@
         <copy file="${rss.jar}" todir="build/WEB-INF/lib"/>
         <copy file="${javalpg.jar}" todir="build/WEB-INF/lib"/>
     </target>
+    <target name="run" depends="build">
+      <java classpath="${java.classpath}:build/WEB-INF/classes"
+            fork="true"
+            classname="org.vesalainen.mailblog.MaidenheadLocator"
+            >
+      </java>
+    </target>
 <!--
     First deployment from your host generates a token. Deployment prompts you
     for the token. One way to input it is by using inputstring attribute
