Added NMEA handlers

--- a/build.xml
+++ b/build.xml
@@ -55,6 +55,7 @@
         <copy file="${kml22.jar}" todir="build/WEB-INF/lib"/>
         <copy file="${rss.jar}" todir="build/WEB-INF/lib"/>
         <copy file="${javalpg.jar}" todir="build/WEB-INF/lib"/>
+        <copy file="${parsers.jar}" todir="build/WEB-INF/lib"/>
     </target>
     <target name="run" depends="build">
       <java classpath="${java.classpath}:build/WEB-INF/classes"
