--- a/mailblog.properties
+++ b/mailblog.properties
@@ -11,5 +11,6 @@ appengine.api.jar=${appengine.java.sdk.path}/lib/user/appengine-api-1.0-sdk-${ap
 kml22.jar=../KML22/dist/KML22.jar
 rss.jar=../RSS/dist/RSS.jar
 javalpg.jar=../lib/JavaLPG.jar
+parsers.jar=../Parsers/dist/Parsers.jar
 
-java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${rss.jar}:${javalpg.jar}
+java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${rss.jar}:${javalpg.jar}:${parsers.jar}
