--- a/mailblog.properties
+++ b/mailblog.properties
@@ -1,13 +1,13 @@
-appengine.path=/Users/tkv/Downloads
+appengine.path=/Users/tkv/Documents/NetBeansProjects/lib/appengine-java-sdk
 java.target=1.7
-appengine.version=1.8.0
+appengine.version=1.8.2
 
-appengine.java.sdk.path=${appengine.path}/appengine-java-sdk-${appengine.version}/appengine-java-sdk-${appengine.version}
+appengine.java.sdk.path=${appengine.path}
 
 appcfg=${appengine.java.sdk.path}/bin/appcfg.cmd
 
 javaee.jar=../lib/javaee.jar
-appengine.api.jar=${appengine.java.sdk.path}/lib/user/appengine-api-1.0-sdk-${appengine.version}.jar
+appengine.api.jar=${appengine.java.sdk.path}/lib/user/appengine-api-1.0-sdk-1.7.7.jar
 kml22.jar=../KML22/dist/KML22.jar
 rss.jar=../RSS/dist/RSS.jar
 javalpg.jar=../lib/JavaLPG.jar
