--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -62,6 +62,10 @@
         <servlet-name>FileUploadServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.FileUploadServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LastPositionServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.LastPositionServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -113,6 +117,10 @@
     <servlet-mapping>
         <servlet-name>FileUploadServlet</servlet-name>
         <url-pattern>/admin/settings/fileupload/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LastPositionServlet</servlet-name>
+        <url-pattern>/lastPosition/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
