--- a/mailblog.properties
+++ b/mailblog.properties
@@ -9,8 +9,9 @@ appcfg=${appengine.java.sdk.path}/bin/appcfg.cmd
 javaee.jar=../lib/javaee.jar
 appengine.api.jar=${appengine.java.sdk.path}/lib/user/appengine-api-1.0-sdk-${appengine.version}.jar
 kml22.jar=../KML22/dist/KML22.jar
+gpx11.jar=../GPX11/dist/GPX11.jar
 rss.jar=../RSS/dist/RSS.jar
 javalpg.jar=../lib/JavaLPG.jar
 parsers.jar=../Parsers/dist/Parsers.jar
 
-java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${rss.jar}:${javalpg.jar}:${parsers.jar}
+java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${gpx11.jar}:${rss.jar}:${javalpg.jar}:${parsers.jar}
