--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -35,6 +35,10 @@
         <servlet-class>org.vesalainen.mailblog.BlobServlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>TemplateSettingsServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.TemplateSettingsServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>BaseSettingsServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.BaseSettingsServlet</servlet-class>
     </servlet>
@@ -87,8 +91,16 @@
         <url-pattern>/blob/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>TemplateSettingsServlet</servlet-name>
+        <url-pattern>/admin/settings/template/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>BaseSettingsServlet</servlet-name>
         <url-pattern>/admin/settings/base/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CommonSettingsServlet</servlet-name>
+        <url-pattern>/admin/settings/common/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PageServlet</servlet-name>
@@ -117,10 +129,6 @@
     <servlet-mapping>
         <servlet-name>LastPositionServlet</servlet-name>
         <url-pattern>/lastPosition/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CommonSettingsServlet</servlet-name>
-        <url-pattern>/admin/settings/common/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
