--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1" standalone="yes" ?>
 <!--
-   Copyright (C) 2012 Helsingfors Segelklubb ry
+   Copyright (C) 2012 Timo Vesalainen
   
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
