--- a/mailblog.properties
+++ b/mailblog.properties
@@ -13,5 +13,6 @@ gpx11.jar=../GPX11/dist/GPX11.jar
 rss.jar=../RSS/dist/RSS.jar
 javalpg.jar=../lib/JavaLPG.jar
 parsers.jar=../Parsers/dist/Parsers.jar
+nmeaparser.jar=../NMEAParser/dist/NMEAParser.jar
 
-java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${gpx11.jar}:${rss.jar}:${javalpg.jar}:${parsers.jar}
+java.classpath=${javaee.jar}:${appengine.api.jar}:${kml22.jar}:${gpx11.jar}:${rss.jar}:${javalpg.jar}:${parsers.jar}:${nmeaparser.jar}
