--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <artifactId>mailblog</artifactId>
 
     <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <appengine.app.version>1</appengine.app.version>
         <appengine.target.version>1.9.3</appengine.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
