--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <groupId>org.vesalainen</groupId>
+    <groupId>org.vesalainen.mailblog</groupId>
     <artifactId>mailblog</artifactId>
 
     <properties>
@@ -63,7 +63,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.vesalainen.lpg</groupId>
             <artifactId>NMEAParser</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
