--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,37 @@
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
-
     <groupId>org.vesalainen.mailblog</groupId>
     <artifactId>mailblog</artifactId>
+    <version>1.0.0</version>
 
+    <name>Mail Blog</name>
+    <description>
+        Google Appengine application for blog site. Blog authoring is done by
+        sending email. The same appengine site can run several blog-sites using
+        different namespaces.
+    </description>
+    <url>https://github.com/tvesalainen/${project.artifactId}</url>
+    <licenses>
+        <license>
+            <name>GNU General Public License, Version 3.0</name>
+            <url>http://www.gnu.org/licenses</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:git://github.com/tvesalainen/${project.artifactId}</connection>
+        <developerConnection>scm:git:git://github.com/tvesalainen/${project.artifactId}</developerConnection>
+        <url>https://github.com/tvesalainen/${project.artifactId}</url>
+    </scm>    
+    <developers>
+        <developer>
+            <name>Timo Vesalainen</name>
+            <email>timo.vesalainen@iki.fi</email>
+            <url>https://github.com/tvesalainen</url>
+        </developer>
+    </developers>
+    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -31,23 +57,12 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -65,7 +80,7 @@
         <dependency>
             <groupId>org.vesalainen.lpg</groupId>
             <artifactId>NMEAParser</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
