--- a/pom.xml
+++ b/pom.xml
@@ -88,17 +88,17 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.vesalainen.kml</groupId>
             <artifactId>KML</artifactId>
             <version>2.2</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.vesalainen.gpx</groupId>
             <artifactId>GPX</artifactId>
             <version>1.1</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.vesalainen.rss</groupId>
             <artifactId>RSS</artifactId>
             <version>2.0</version>
         </dependency>
