--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
     <groupId>org.vesalainen.mailblog</groupId>
     <artifactId>mailblog</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
 
     <name>Mail Blog</name>
     <description>
@@ -87,22 +87,22 @@
         <dependency>
             <groupId>org.vesalainen.lpg</groupId>
             <artifactId>NMEAParser</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.kml</groupId>
-            <artifactId>KML</artifactId>
-            <version>2.2</version>
+            <artifactId>KML22</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.gpx</groupId>
-            <artifactId>GPX</artifactId>
-            <version>1.1</version>
+            <artifactId>GPX11</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.rss</groupId>
-            <artifactId>RSS</artifactId>
-            <version>2.0</version>
+            <artifactId>RSS20</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
       
