--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
+        <groupId>org.vesalainen</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.1</version>
     </parent>    
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -20,33 +20,9 @@
         sending email. The same appengine site can run several blog-sites using
         different namespaces.
     </description>
-    <url>https://github.com/tvesalainen/${project.artifactId}</url>
-    <licenses>
-        <license>
-            <name>GNU General Public License, Version 3.0</name>
-            <url>http://www.gnu.org/licenses</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <scm>
-        <connection>scm:git:git://github.com/tvesalainen/${project.artifactId}</connection>
-        <developerConnection>scm:git:git://github.com/tvesalainen/${project.artifactId}</developerConnection>
-        <url>https://github.com/tvesalainen/${project.artifactId}</url>
-    </scm>    
-    <developers>
-        <developer>
-            <name>Timo Vesalainen</name>
-            <email>timo.vesalainen@iki.fi</email>
-            <url>https://github.com/tvesalainen</url>
-        </developer>
-    </developers>
-    
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <appengine.app.version>1</appengine.app.version>
-        <appengine.target.version>1.9.18</appengine.target.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <appengine-web-app.application>adventurersblog</appengine-web-app.application>
         <appengine-web-app.version>1-0-3</appengine-web-app.version> <!-- this is the same as project.version with dots changed to dashes-->
     </properties>
@@ -56,12 +32,10 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>${appengine.target.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
 
@@ -69,19 +43,16 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-testing</artifactId>
-            <version>${appengine.target.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-stubs</artifactId>
-            <version>${appengine.target.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -92,17 +63,14 @@
         <dependency>
             <groupId>org.vesalainen.kml</groupId>
             <artifactId>KML22</artifactId>
-            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.gpx</groupId>
             <artifactId>GPX11</artifactId>
-            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.rss</groupId>
             <artifactId>RSS20</artifactId>
-            <version>1.0.0</version>
         </dependency>
     </dependencies>
       
