--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <filter-name>NamespaceFilter</filter-name>
         <filter-class>org.vesalainen.mailblog.NamespaceFilter</filter-class>
     </filter>
+    <filter>
+        <filter-name>FacebookFilter</filter-name>
+        <filter-class>org.vesalainen.mailblog.FacebookFilter</filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>NamespaceFilter</filter-name>
         <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>FacebookFilter</filter-name>
+        <url-pattern>/index.html</url-pattern>
     </filter-mapping>
     <servlet>
         <display-name>Remote API Servlet</display-name>
