--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>FacebookFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>FacebookFilter</filter-name>
         <url-pattern>/index.html</url-pattern>
     </filter-mapping>
     <servlet>
