--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,10 @@
         <servlet-name>LastPositionServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.LastPositionServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>OpenGrapServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.OpenGraphServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -141,6 +145,10 @@
     <servlet-mapping>
         <servlet-name>LastPositionServlet</servlet-name>
         <url-pattern>/lastPosition/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OpenGrapServlet</servlet-name>
+        <url-pattern>/opengraph/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
