--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.vesalainen</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.4</version>
     </parent>    
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -38,8 +38,10 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
-        <!-- Test Dependencies -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+        </dependency>    
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -70,6 +72,10 @@
         <dependency>
             <groupId>org.vesalainen.rss</groupId>
             <artifactId>RSS20</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.vesalainen.parsers</groupId>
+            <artifactId>date</artifactId>
         </dependency>
     </dependencies>
       
