--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -83,8 +83,12 @@
         <servlet-class>org.vesalainen.mailblog.LastPositionServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>OpenGrapServlet</servlet-name>
+        <servlet-name>OpenGraphServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.OpenGraphServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>GeoJSONServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.GeoJSONServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
@@ -149,6 +153,10 @@
     <servlet-mapping>
         <servlet-name>OpenGrapServlet</servlet-name>
         <url-pattern>/opengraph/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GeoJSONServlet</servlet-name>
+        <url-pattern>/geojson/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
