--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
             <groupId>org.vesalainen.parsers</groupId>
             <artifactId>date</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.vesalainen</groupId>
+            <artifactId>util</artifactId>
+        </dependency>
     </dependencies>
       
     <build>
