--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -90,6 +90,10 @@
         <servlet-name>GeoJSONServlet</servlet-name>
         <servlet-class>org.vesalainen.mailblog.GeoJSONServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CronServlet</servlet-name>
+        <servlet-class>org.vesalainen.mailblog.CronServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RemoteApiServlet</servlet-name>
         <url-pattern>/remote_api</url-pattern>
@@ -158,6 +162,10 @@
         <servlet-name>GeoJSONServlet</servlet-name>
         <url-pattern>/geojson/*</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CronServlet</servlet-name>
+        <url-pattern>/cron/*</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
@@ -182,6 +190,15 @@
         </web-resource-collection>
         <auth-constraint>
             <description/>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>cron</web-resource-name>
+            <url-pattern>/cron/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
             <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
