Tested cron stuff

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -155,7 +155,7 @@
         <url-pattern>/lastPosition/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>OpenGrapServlet</servlet-name>
+        <servlet-name>OpenGraphServlet</servlet-name>
         <url-pattern>/opengraph/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
