--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.vesalainen</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.8</version>
     </parent>    
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
@@ -58,8 +58,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.vesalainen.lpg</groupId>
-            <artifactId>NMEAParser</artifactId>
+            <groupId>org.vesalainen.nmea</groupId>
+            <artifactId>parser</artifactId>
         </dependency>
         <dependency>
             <groupId>org.vesalainen.kml</groupId>
