--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,11 +14,7 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>FacebookFilter</filter-name>
-        <url-pattern>/</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>FacebookFilter</filter-name>
-        <url-pattern>/index.html</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
     <servlet>
         <display-name>Remote API Servlet</display-name>
