--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <appengine-web-app.application>adventurersblog</appengine-web-app.application>
         <appengine-web-app.version>1-0-6</appengine-web-app.version> <!-- this is the same as project.version with dots changed to dashes-->
+        <appengine.target.version>1.9.38</appengine.target.version>
     </properties>
 
     <dependencies>
