Replaced HashMapList with HashMap to fix java 8 util problem

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
     <groupId>org.vesalainen.mailblog</groupId>
     <artifactId>mailblog</artifactId>
-    <version>1.0.6</version><!-- REMEMBER appengine-web-app.version !!!!!-->
+    <version>1.0.6-branch-1</version><!-- REMEMBER appengine-web-app.version !!!!!-->
 
     <name>Mail Blog</name>
     <description>
@@ -24,8 +24,8 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <appengine-web-app.application>adventurersblog</appengine-web-app.application>
-        <appengine-web-app.version>1-0-6</appengine-web-app.version> <!-- this is the same as project.version with dots changed to dashes-->
-        <appengine.target.version>1.9.38</appengine.target.version>
+        <appengine-web-app.version>1-0-6-branch-1</appengine-web-app.version> <!-- this is the same as project.version with dots changed to dashes-->
+        <appengine.target.version>1.9.53</appengine.target.version>
     </properties>
 
     <dependencies>
@@ -81,6 +81,7 @@
         <dependency>
             <groupId>org.vesalainen</groupId>
             <artifactId>util</artifactId>
+            <version>1.0.5-branch-1</version>
         </dependency>
     </dependencies>
       
