new version of GeoData

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-remote-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.vesalainen.nmea</groupId>
             <artifactId>parser</artifactId>
         </dependency>
@@ -78,10 +83,6 @@
         <dependency>
             <groupId>org.vesalainen.parsers</groupId>
             <artifactId>coordinates</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.vesalainen.parsers</groupId>
-            <artifactId>date</artifactId>
         </dependency>
         <dependency>
             <groupId>org.vesalainen</groupId>
